...
        android:id="@+id/root_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_edit_reminder_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ActionBarStyle"
            android:background="?attr/appBarColor"
            tools:title="Add / edit review reminder" />
...
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/add_edit_reminder_time_label"
                        android:textSize="18sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_edit_reminder_time_button"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent"
                        app:cornerRadius="8dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
...
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/add_edit_reminder_deck_label"
                        android:textSize="18sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/add_edit_reminder_deck_name"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:minHeight="?minTouchTargetSize"
                        android:maxLines="1"
...
                    android:id="@+id/add_edit_reminder_advanced_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/add_edit_reminder_advanced_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="?attr/minTouchTargetSize"
                        android:orientation="horizontal">

                        <ImageView
...
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_gravity="center"
                                android:layout_marginStart="24dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/add_edit_reminder_card_threshold_input"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="number" />

                            </com.google.android.material.textfield.TextInputLayout>

...
                            android:id="@+id/add_edit_reminder_only_notify_if_no_reviews_section"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.checkbox.MaterialCheckBox
                                android:id="@+id/add_edit_reminder_only_notify_if_no_reviews_checkbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/add_edit_reminder_only_notify_if_no_reviews_label"
                                android:layout_width="0dp"
...
