<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reminders_list_item_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:paddingHorizontal="36dp"
    android:paddingVertical="20dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/reminders_list_text_container"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reminders_list_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="12:00 a.m." />

        <TextView
            android:id="@+id/reminders_list_deck_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="Example Deck Name" />

    </LinearLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/reminders_list_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>