...
            app:navigationIcon="?attr/homeAsUpIndicator"
            tools:title="Review reminders"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:overScrollFooter="@color/transparent"
        android:clipToPadding="false"
        android:drawSelectorOnTop="true"
...
        android:scrollbars="vertical"
        android:contentDescription="@string/schedule_reminders_list_content_description"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_schedule_reminders" />

    <LinearLayout
        android:id="@+id/no_reminders_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
...
            android:text="@string/you_have_no_review_reminders"
            style="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_action_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        style="?attr/floatingActionButtonPrimaryStyle"
        app:backgroundTint="?attr/fab_normal"
...
